tests/max_encoded_len_ui/not_encode.stderr
error[E0277]: the trait bound `NotEncode: Encode` is not satisfied
 --> tests/max_encoded_len_ui/not_encode.rs:4:8
  |
4 | struct NotEncode;
  |        ^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NotEncode`, which is required by `NotEncode: Encode`
  |
  = help: the following other types implement trait `Encode`:
            ()
            (A0, B0, C0, D0, E0, F0, G0, H0, I0, J0, K0, L0, M0, N0, O0, P0, Q0, R0)
            (B0, C0, D0, E0, F0, G0, H0, I0, J0, K0, L0, M0, N0, O0, P0, Q0, R0)
            (C0, D0, E0, F0, G0, H0, I0, J0, K0, L0, M0, N0, O0, P0, Q0, R0)
            (D0, E0, F0, G0, H0, I0, J0, K0, L0, M0, N0, O0, P0, Q0, R0)
            (E0, F0, G0, H0, I0, J0, K0, L0, M0, N0, O0, P0, Q0, R0)
            (F0, G0, H0, I0, J0, K0, L0, M0, N0, O0, P0, Q0, R0)
            (G0, H0, I0, J0, K0, L0, M0, N0, O0, P0, Q0, R0)
          and $N others
  = note: required for `NotEncode` to implement `Encode`
note: required by a bound in `MaxEncodedLen`
 --> src/max_encoded_len.rs
  |
  | pub trait MaxEncodedLen: Encode {
  |                          ^^^^^^ required by this bound in `MaxEncodedLen`
