tests/max_encoded_len_ui/not_encode.rs
use jam_codec::{MaxEncodedLen};

#[derive(MaxEncodedLen)]
struct NotEncode;

fn main() {}
